TOS Modal Update
Modal creation for TOS acceptance on user log in. The modal only shows until the user accepts the terms of service.

--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -570,3 +570,11 @@ ucb-trusted-content-preview:
   css:
     theme:
       css/block/ucb-trusted-content-block.css : {weight: 5}
+
+ucb-tos-acceptance:
+  version: 1.x
+  js:
+    js/ucb-tos-acceptance.js: { }
+  css:
+    theme:
+      css/ucb-tos-acceptance.css: { weight: 5 }
